# monitor

./: .gitignore  LICENSE  Makefile  pyproject.toml
monitor/: cli.py  messages.py  monitors.py  wrapper.py
src/monitor/: cli.py  messages.py  monitors.py  wrapper.py
tests/: test_email.py  test_messages.py  test_monitors.py  test_wrapper.py
