[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor"
authors = [
    { name = "Christian Schäfer", email = "christian.schaefer@tatenmitdaten.com" },
]
description = "Package for monitoring AWS Lambda execution results"
requires-python = ">=3.12"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "boto3",
    "typer",
    "boto3-stubs[ses]",
    "moto",
    "pytest",
    "mypy",
    "flake8",
]
cli = [
    "boto3",
    "typer",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.distutils.egg_info]
egg_base = "."

[project.scripts]
monitor = "monitor.cli:cli"